force-app/main/default/objects/TMT_Business_Snapshot__c/TMT_Business_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Current Order Book and Billings &amp;Bookings of the last 365 days by reporting area and product. Captured data: total value, invoiced quantity, contribution by uB Office. This data can be used to plot TMT graphs of sales by geographical aspects and product parameters.</description>
    <label>TMT Business Snapshot</label>
    <nameField>
        <displayFormat>TMT-{YYYY}-{MM}-{00000}</displayFormat>
        <label>TMT Business Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TMT Business Snapshots</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>