force-app/main/default/objects/TMT_Business_Snapshot__c/fields/AVG_ASP__c.field-meta.xml
<CustomField>
    <fullName>AVG_ASP__c</fullName>
    <formula>if( Qty_Invoiced__c =0, 0, Total_Value__c / Qty_Invoiced__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average ASP over the last 12 months</inlineHelpText>
    <label>AVG ASP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>