force-app/main/default/objects/TMT_Business_Snapshot__c/fields/AVG_ASP_CHF__c.field-meta.xml
<CustomField>
    <fullName>AVG_ASP_CHF__c</fullName>
    <formula>if( Qty_Invoiced__c = 0, 0,  TMT_Billings_CHF__c / Qty_Invoiced__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average sales price in CHF over the last 12 months</inlineHelpText>
    <label>AVG ASP CHF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>