force-app/main/default/objects/TMT_Business_Snapshot__c/fields/Date_End_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Date_End_of_Month__c</fullName>
    <defaultValue>/* Date(2010,05,31) */
/* use below date for normal use of snapshot */
Date(1999,1,1)</defaultValue>
    <inlineHelpText>Set default value before running an analytic snapshot when the report shows TMT numbers in the past. In this case the set date will be used to display the data.</inlineHelpText>
    <label>Date End of Month</label>
    <type>Date</type>
</CustomField>