force-app/main/default/objects/TMT_Business_Snapshot__c/fields/Order_Book__c.field-meta.xml
<CustomField>
    <fullName>Order_Book__c</fullName>
    <inlineHelpText>Order book at a the date TMT Date</inlineHelpText>
    <label>Order Book</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>