force-app/main/default/objects/TMT_Business_Snapshot__c/fields/Order_Book_CHF__c.field-meta.xml
<CustomField>
    <fullName>Order_Book_CHF__c</fullName>
    <inlineHelpText>Order book in CHF at the date TMT Date</inlineHelpText>
    <label>Order Book CHF</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>