force-app/main/default/objects/TMT_Business_Snapshot__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <length>20</length>
    <type>Text</type>
</CustomField>