force-app/main/default/objects/TMT_Business_Snapshot__c/fields/Qty_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Qty_Invoiced__c</fullName>
    <label>Qty Invoiced</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>