force-app/main/default/objects/TMT_Business_Snapshot__c/fields/Qty_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Qty_Ordered__c</fullName>
    <inlineHelpText>Total quantity ordered</inlineHelpText>
    <label>Qty Ordered</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>