force-app/main/default/objects/TMT_Business_Snapshot__c/fields/Reporting_Area__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Area__c</fullName>
    <label>Reporting Area</label>
    <length>20</length>
    <type>Text</type>
</CustomField>