force-app/main/default/objects/TMT_Business_Snapshot__c/fields/Reporting_Category__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Category__c</fullName>
    <inlineHelpText>Product reporting category</inlineHelpText>
    <label>Reporting Category</label>
    <length>20</length>
    <type>Text</type>
</CustomField>