force-app/main/default/objects/TMT_Business_Snapshot__c/fields/Reporting_Region__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Region__c</fullName>
    <formula>Case (Reporting_Area__c,
&quot;HQ&quot;,&quot;UBX Corporate&quot;,
&quot;Corporate&quot;,&quot;UBX Corporate&quot;,
&quot;AU&quot;,&quot;APAC&quot;,
&quot;IN&quot;,&quot;APAC&quot;,
&quot;MY&quot;,&quot;APAC&quot;,
&quot;NZ&quot;,&quot;APAC&quot;,
&quot;PH&quot;,&quot;APAC&quot;,
&quot;SG&quot;,&quot;APAC&quot;,
&quot;TH&quot;,&quot;APAC&quot;,
&quot;JP&quot;,&quot;APAC&quot;,
&quot;CN&quot;,&quot;APAC&quot;,
&quot;HK&quot;,&quot;APAC&quot;,
&quot;TW&quot;,&quot;APAC&quot;,
&quot;KR&quot;,&quot;APAC&quot;,
&quot;Rest of APAC&quot;,&quot;APAC&quot;,

&quot;AR&quot;,&quot;Americas&quot;,
&quot;BR&quot;,&quot;Americas&quot;,
&quot;CA&quot;,&quot;Americas&quot;,
&quot;CL&quot;,&quot;Americas&quot;,
&quot;MX&quot;,&quot;Americas&quot;,
&quot;US&quot;,&quot;Americas&quot;,
&quot;UY&quot;,&quot;Americas&quot;,
&quot;Rest of Americas&quot;,&quot;Americas&quot;,

&quot;EMEA&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>consolidation of uB Office to Regions</inlineHelpText>
    <label>Reporting Region</label>
    <type>Text</type>
</CustomField>