force-app/main/default/objects/TMT_Business_Snapshot__c/fields/Reporting_uB_Office__c.field-meta.xml
<CustomField>
    <fullName>Reporting_uB_Office__c</fullName>
    <formula>Case (Reporting_Area__c,
&quot;HQ&quot;,&quot;UBX Corporate&quot;,
&quot;Corporate&quot;,&quot;UBX Corporate&quot;,
&quot;UBX Corporate&quot;,&quot;UBX Corporate&quot;,
&quot;AU&quot;,&quot;Australia&quot;,
&quot;IN&quot;,&quot;India&quot;,
&quot;MY&quot;,&quot;Rest of APAC&quot;,
&quot;NZ&quot;,&quot;Australia&quot;,
&quot;PH&quot;,&quot;Rest of APAC&quot;,
&quot;SG&quot;,&quot;Rest of APAC&quot;,
&quot;TH&quot;,&quot;Rest of APAC&quot;,
&quot;JP&quot;,&quot;Japan&quot;,
&quot;CN&quot;,&quot;China&quot;,
&quot;HK&quot;,&quot;China&quot;,
&quot;TW&quot;,&quot;Taiwan&quot;,
&quot;KR&quot;,&quot;Korea&quot;,
&quot;Rest of APAC&quot;,&quot;Rest of APAC&quot;,

&quot;AR&quot;,&quot;Americas&quot;,
&quot;BR&quot;,&quot;Americas&quot;,
&quot;CA&quot;,&quot;Americas&quot;,
&quot;CL&quot;,&quot;Americas&quot;,
&quot;MX&quot;,&quot;Americas&quot;,
&quot;US&quot;,&quot;Americas&quot;,
&quot;UY&quot;,&quot;Americas&quot;,
&quot;Rest of Americas&quot;,&quot;Americas&quot;,

&quot;EMEA&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Consolidation of Reporting Area to u-blox offices</inlineHelpText>
    <label>Reporting uB Office</label>
    <type>Text</type>
</CustomField>