force-app/main/default/objects/TMT_Business_Snapshot__c/fields/TMT_Billings_CHF__c.field-meta.xml
<CustomField>
    <fullName>TMT_Billings_CHF__c</fullName>
    <inlineHelpText>Total Billings last 12 months in CHF</inlineHelpText>
    <label>TMT Billings CHF</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>