force-app/main/default/objects/TMT_Business_Snapshot__c/fields/TMT_Contr_EMEA_CHF__c.field-meta.xml
<CustomField>
    <fullName>TMT_Contr_EMEA_CHF__c</fullName>
    <inlineHelpText>Contribution EMEA last 12 months, in CHF</inlineHelpText>
    <label>TMT Contr EMEA CHF</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>