force-app/main/default/objects/TMT_Business_Snapshot__c/fields/TMT_Contr_Japan_CHF__c.field-meta.xml
<CustomField>
    <fullName>TMT_Contr_Japan_CHF__c</fullName>
    <inlineHelpText>Contribution Japan last 12 months, in CHF</inlineHelpText>
    <label>TMT Contr Japan CHF</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>