force-app/main/default/objects/TMT_Business_Snapshot__c/fields/TMT_Contribution_CHF__c.field-meta.xml
<CustomField>
    <fullName>TMT_Contribution_CHF__c</fullName>
    <inlineHelpText>Total contribution of last twelve months in CHF</inlineHelpText>
    <label>TMT Contribution CHF</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>