force-app/main/default/objects/TMT_Business_Snapshot__c/fields/TMT_Date__c.field-meta.xml
<CustomField>
    <fullName>TMT_Date__c</fullName>
    <description>Subtract 3 days to set the date to end of previous month</description>
    <formula>if( year(Date_End_of_Month__c) = 1999,
datevalue( Execution_Time__c  - 3),
Date_End_of_Month__c)

/*  if( Date_End_of_Month__c = Datevalue(&quot;9/9/1999&quot;),
datevalue( Execution_Time__c  - 3),
Date_End_of_Month__c)  */</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMT Date</label>
    <type>Date</type>
</CustomField>