force-app/main/default/objects/TMT_Business_Snapshot__c/fields/Total_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Total_Bookings__c</fullName>
    <inlineHelpText>Total Bookings last 12 months, in local currency</inlineHelpText>
    <label>TMT Bookings</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>