force-app/main/default/objects/TMT_Business_Snapshot__c/fields/Total_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Value__c</fullName>
    <inlineHelpText>Billings of last 12 months, in local currency</inlineHelpText>
    <label>TMT Billings</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>